# DRTS_Mini_Projects

DRTS_Mini_Project1/: README.md
DRTS_Mini_Project1/Main_code/: drts_project.py
DRTS_Mini_Project1/tasks/: generator.py
DRTS_Mini_Project2/: full_project_evaluation.md  main.tex
DRTS_Mini_Project2/DRTS_Mini_Project_2/: README.md  results_utils.py  run_all.py
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/: README.md  pyproject.toml  setup.py
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/docs/: gen_config.json  glcs.json  routes.json  schedules.json  streams.json  topology.json
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/examples/configs/: aerospace_config.json  automotive_config.json  industrial_config.json
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/tsn_case_gen_/cli/: UI.py
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/tsn_case_gen_/domain/: config_validation.py  route_generator.py  validation.py
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/tsn_case_gen_/infrastrucutre/json_schema/schemas/: topology.schema.json  traffic.AUDIO-VOICE.json  traffic.DIAGNOSTICS.json
DRTS_Mini_Project2/DRTS_Mini_Project_2/Testexamples/tsn-test-cases/tsn_case_gen_/tests/Unit/: conftest.py  test_route_generator.py  test_topology_generator.py  test_utils_functions.py
DRTS_Mini_Project2/Project/: project evaluation criteria..docx
DRTS_Mini_Project_2/: ENHANCEMENTS.md  generate_extra_csvs.py  main.tex  requirements.txt
(+2085 files in other folders)
